begun to make the presentation fit the goal with two lists for viewed and yet to be viewed in an organized fashion and the randomize button not breaking anything. next to add background colors to individual viewed items.

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -2,10 +2,35 @@
   text-align: left;
 }
 
-.site-display {
+/* .site-display {
   display: inline-block;
-}
+} */
 
 #viewedList {
-  color: red;
+  float: left;
+  width: 45%;
+}
+#list {
+  float: left;
+  width: 50%;
+}
+
+#random {
+  float: left;
+}
+
+#input {
+  margin-left: 20px;
+  width: 100%;
+}
+
+#title {
+  width: 80%;
+}
+
+.like,
+.dislike,
+.del {
+  float: right;
+  margin-right: 2px;
 }
